# schema-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/schema-rs/: Cargo.toml
crates/schema-rs-core/: Cargo.toml
crates/schema-rs-core/src/: conditional_test.rs  default.rs  default_test.rs  dependency.rs  effective.rs  lib.rs  normalize.rs  runtime.rs  schema.rs  schema_util.rs  util.rs  validate.rs  validate_test.rs
crates/schema-rs-egui/: Cargo.toml
crates/schema-rs-egui/src/: dialog.rs  field.rs  form.rs  lib.rs  renderer.rs  theme.rs
crates/schema-rs-win32/: Cargo.toml  README.md
crates/schema-rs-win32/src/: form.rs  lib.rs  state.rs  util.rs  wndproc.rs
crates/schema-rs-win32/src/controls/: array.rs  boolean.rs  mod.rs  number.rs  object.rs  primitives.rs  string.rs
crates/schema-rs/src/: lib.rs
examples/playground/: Cargo.toml
examples/playground/src/: egui_app.rs  main.rs  schemas.rs  win32_app.rs
