[workspace]
resolver = "2"
members = [
    "crates/schema-rs-core",
    "crates/schema-rs-egui",
    "examples/playground",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cnfatal/schema-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
regex = "1"
lru = "0.14"
egui = "0.31"
egui_extras = "0.31"
eframe = "0.31"
rfd = "0.15"
