[package]
name = "schema-rs-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JSON Schema form rendering with egui"

[dependencies]
schema-rs-core = { path = "../schema-rs-core" }
egui = { workspace = true }
egui_extras = { workspace = true }
serde_json = { workspace = true }
rfd = { workspace = true }
