[package]
name = "schema-rs-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "JSON Schema form rendering with egui"
keywords.workspace = true
categories.workspace = true

[dependencies]
schema-rs-core = { workspace = true }
egui = "0.31"
egui_extras = "0.31"
eframe = { version = "0.31", optional = true }
serde_json = { workspace = true }
rfd = "0.15"

[features]
default = []
dialog = ["eframe"]
