[package]
name = "schema-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Main entry point for schema-rs, providing schema-driven UI components"
keywords.workspace = true
categories.workspace = true

[dependencies]
schema-rs-core = { workspace = true }
schema-rs-egui = { workspace = true, optional = true }

[features]
default = ["egui"]
egui = ["dep:schema-rs-egui"]
