[package]
name = "schema-rs-playground"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive playground for schema-rs"

[dependencies]
schema-rs-core = { path = "../../crates/schema-rs-core" }
schema-rs-egui = { path = "../../crates/schema-rs-egui" }
eframe = { workspace = true }
serde_json = { workspace = true }
