[package]
name = "schema-rs-playground"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive playground for schema-rs"
publish = false

[dependencies]
schema-rs = { workspace = true, features = ["egui"] }
eframe = "0.31"
serde_json = { workspace = true }
